--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <!-- This line links the html file with the css stylesheet -->
     <link rel="stylesheet" href="./CSS/style.css">
-    <link rel="stylesheet" href="utilities.css">
+    <link rel="stylesheet" href="./CSS/utilities.css">
 
     <!-- Added this library from https://cdnjs.com/libraries it would allow to use fontawesome classes to create icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
@@ -54,13 +54,13 @@
                 <h2>Request a Demo</h2>
                 <form>
                     <div class="form-control">
-                    <input type="text" name="name" placeholder="Name" required>
+                        <input type="text" name="name" placeholder="Name" required>
                     </div>
                     <div class="form-control">
-                    <input type="text" name="company" placeholder="Company Name" required>
+                        <input type="text" name="company" placeholder="Company Name" required>
                     </div>
                     <div class="form-control">
-                    <input type="email" name="email" placeholder="Email" required>
+                        <input type="email" name="email" placeholder="Email" required>
                     </div>
                     <input type="submit" value="Send" class="btn btn-primary">
                 </form>
@@ -69,10 +69,11 @@
     </div>
 
     <!-- STATS -->
-    <div class="stats">
+    <section class="stats">
         <div class="container">
             <h3 class="stats-heading text-center my-1">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et architecto recusandae, nobis iure alias dolor?
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et architecto recusandae, nobis iure alias
+                dolor?
             </h3>
 
             <div class="grid grid-3 text-center my-4">
@@ -93,7 +94,35 @@
                 </div>
             </div>
         </div>
+    </section>
+
+    <!-- STATS -->
+
+    <section class="cli">
+        <div class="container grid">
+            <img src="./images/cli.png" alt="cli">
+            <div class="card">
+                <h3>Easy to use, cross platform CLI</h3>
+            </div>
+            <div class="card">
+                <h3>Deploy in seconds</h3>
+            </div>
+        </div>
+    </section>
+
+    <!-- CLOUD -->
+<section class="cloud bg-primary my-2 py-2">
+<div class="container grid">
+    <div class="text-center">
+        <h2 class="lg">Extreme Cloud Hosting</h2>
+        <p class="lead my-1">Cloud hosting like you have never seen. Fast, efficient and scalable</p>
+        <a href="features.html" class="btn btn-dark">Read More</a>
     </div>
+    <img src="./images/cloud.png" alt="Cloud">
+</div>
+</section>
+
+    <!-- SUPPORTED LANGUAGES -->
 
 </body>
 
